--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&family=Sniglet:wght@400;800&display=swap" 
     rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="http://localhost:3000/assets/style.css">
     <title>Social app</title>
   </head>
   <body>
